--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@
 .name {
     padding-bottom:30px;
 }
-.education {
-    padding-bottom:30px;
-}
 .left-side h1 {
     text-transform: uppercase;
     font-weight: 600;
@@ -46,6 +43,10 @@ p {
 .school img {
     max-width:36px;
     margin-right:5px;
+}
+.hobbies {
+    clear:both;
+    padding-top: 30px;
 }
 .hobbies .hobbie {
     width:25%;
